coupon code change: text box in the same line as Code:, updated style.

--- a/wp-content/themes/5506/core.css
+++ b/wp-content/themes/5506/core.css
@@ -1353,6 +1353,13 @@ span.wpcf7-not-valid-tip {
     line-height:20px;
 }
 
+.haveCoupon {
+	//font-weight: bold;
+	font-size: 12px;
+	float: right;
+	clear: both;
+}
+
 #Content #viewCartNav {
     border:0;
     text-align:right;
