--- a/form/css/style.css
+++ b/form/css/style.css
@@ -43,7 +43,7 @@ GLOBAL
 html, body { 
 	margin: 0;
     padding: 0;
- 	background-color: #f9f9f9;
+ 	/*background-color: #f9f9f9;*/
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 12px;
 	color: #000000;
@@ -102,8 +102,11 @@ label.error {
 }
 
 #logo{
-	margin: 10px auto auto;
+	margin: 20px auto auto;
     width: 262px;
+}
+#logo img{
+display: none;
 }
 
 /*-------------------------------------
